# locat

./: .envrc  .gitignore  Cargo.toml  flake.nix
.cargo/: config.toml
src/: lib.rs
