[package]
name = "locat"
version = "0.4.0"
edition = "2021"
# only publish to private registry
publish = ["itsrainingmani"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maxminddb = "0.23"
rusqlite = "0.28"
thiserror = "1"
tokio = { version = "1.28.2", features = ["fs", "test-util", "macros"] }
tokio-rusqlite = "0.3.0"
